@@ -1,6 +1,7 @@
 master
 - Zixaphir
   Switched default theme to Yotsuba B.
+  New Option: Updater Position.
 
 0.8beta
 - Zixaphir
